integration_tests/codegen_fail/fail/union/struct_same_type_pretty.stderr
error: duplicated attribute argument found
 --> $DIR/struct_same_type_pretty.rs:5:14
  |
5 | #[graphql(on i32 = Character::b)]
  |              ^^^
